crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__call__call_ref_mismatch.snap
---
source: crates/service/tests/diagnostics/typeck/call.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 4
        },
        "end": {
          "line": 5,
          "character": 14
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, (ref null 0)], found []"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 14
        },
        "end": {
          "line": 5,
          "character": 15
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [f64] at the end",
      "data": [
        "f64"
      ]
    },
    {
      "range": {
        "start": {
          "line": 8,
          "character": 4
        },
        "end": {
          "line": 8,
          "character": 14
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, (ref null 0)], found [(ref 1)]"
    },
    {
      "range": {
        "start": {
          "line": 8,
          "character": 14
        },
        "end": {
          "line": 8,
          "character": 15
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [f64] at the end",
      "data": [
        "f64"
      ]
    }
  ]
}
