crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__call__return_call_mismatch.snap
---
source: crates/service/tests/diagnostics/typeck/call.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 10
        },
        "end": {
          "line": 3,
          "character": 41
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32], found [i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 27
              },
              "end": {
                "line": 3,
                "character": 40
              }
            }
          },
          "message": "expected type `f32`, found `i32`"
        }
      ]
    }
  ]
}
