crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__call__type_mismatch_from_func_results.snap
---
source: crates/service/tests/diagnostics/typeck/call.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 8
        },
        "end": {
          "line": 6,
          "character": 32
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i64, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 6,
                "character": 17
              },
              "end": {
                "line": 6,
                "character": 31
              }
            }
          },
          "message": "expected type `i32`, found `i64`"
        }
      ]
    }
  ]
}
